--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
                 <div class="logo">
                     <div class="logo-img">
                         <!-- Added logo image -->
-                        <img src="svrwebsite/images/SVRLogo.jpg" alt="SVR Computer Education Logo">
+                        <img src="svrwebsite/images/logo.jpg" alt="SVR Computer Education Logo">
                     </div>
                     <div>
                         <div class="iso-badge">ISO 9001:2015 CERTIFIED</div>
