--- a/index.html
+++ b/index.html
@@ -1553,7 +1553,7 @@
                     </div>
                 </div>
                 <div class="contact-form">
-                    <form>
+                   <form action="mailto:svrcomputers.training@gmail.com" method="post" enctype="text/plain">
                         <div class="form-group">
                             <input type="text" placeholder="Your Name" required>
                         </div>
